juan_torres/session-02/exercise-01/conf/ingress-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: ingress-nginx-temp
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  ports:
    - name: http
      port: 80
      nodePort: 30080
      targetPort: http
    - name: https
      port: 443
      nodePort: 30443
      targetPort: https
