juan_torres/session-02/exercise-01/conf/netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: mariadb-deny
  namespace: exercise-01
spec:
  podSelector:
    matchLabels:
      app: database
      tier: mariadb
  ingress: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mariadb-allow
  namespace: exercise-01
spec:
  podSelector:
    matchLabels:
      app: database
      tier: mariadb
  ingress:
    - from:
      - podSelector:
          matchLabels:
            tier: frontend
      ports:
        - protocol: TCP
          port: 3306
